Corrected header z-index

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 1;
 }
 
 .header__logo {
@@ -64,10 +65,6 @@ ul {
   padding: 0px;
   margin: 0px;
   list-style-type: none;
-}
-
-li {
-  z-index: -1;
 }
 
 @media (min-width: 768px){
